5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1643_2446.log
== TEST (2019-04-15 15:24:07) 
-- CODE:
senha = int(input("Informe a senha"))
print(senha[2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(senha[2])
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:10) 
-- CODE:
senha = (input("Informe a senha"))
print(senha[2])

-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:36) 
-- CODE:
senha = (input("Informe a senha"))
print(senha[2])

-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:46:33) 
-- CODE:
senha = (input("Informe a senha :"))
print(senha)

-- OUTPUT:
087612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:19) 
-- CODE:
senha = (input("Informe a senha :"))
print(senha // 100 % 10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(senha // 100 % 10)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:35) 
-- CODE:
senha =int(input("Informe a senha :"))
print(senha // 100 % 10)

-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:05) 
-- CODE:
senha =int(input("Informe a senha :"))
print(senha // 1000 % 10)

-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:30) 
-- CODE:
senha =int(input("Informe a senha :"))
print(senha // 1000 % 100)

-- OUTPUT:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:51) 
-- CODE:
senha =int(input("Informe a senha :"))
print(senha // 1000 % 110)

-- OUTPUT:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:03) 
-- CODE:
senha =int(input("Informe a senha :"))
print(senha // 1000 % 10)

-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:09:37) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:09:44) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:10:23) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 10 % 10
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:10:38) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 100 % 10
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:11:00) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 100 % 1010
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:11:10) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 100 % 100
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:11:18) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 1000 % 100
print(segunda)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:11:42) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 1000 % 10
print(segunda)
print(quarta)

-- OUTPUT:
8
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:11:56) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 100 % 10
print(segunda)
print(quarta)

-- OUTPUT:
8
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:12:52) 
-- CODE:
senha =int(input("Informe a senha :"))
segunda = senha // 10000 % 10
quarta = senha // 100 % 10
sexta = senha // 1 % 10
print(segunda)
print(quarta)
print(sexta)


-- OUTPUT:
8
6
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:15:00) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira = senha // 100000 % 10
segunda = senha // 10000 % 10
terceira = senha // 1000 % 10
quarta = senha // 100 % 10
quinta = senha // 10 % 10
sexta = senha // 1 % 10
print(primeira)
print(segunda)
print(terceira)
print(quarta)
print(quinta)
print(sexta)


-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:17:30) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira =  senha // 100000 % 10
segunda  =  senha // 10000 % 10
terceira =  senha // 1000 % 10
quarta   =  senha // 100 % 10
quinta   =  senha // 10 % 10
sexta    =  senha // 1 % 10
parte1 = segunda+quarta+sexta
parte2 = primeira+terceira+quinta

-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:21:35) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira =  senha // 100000 % 10
segunda  =  senha // 10000 % 10
terceira =  senha // 1000 % 10
quarta   =  senha // 100 % 10
quinta   =  senha // 10 % 10
sexta    =  senha // 1 % 10
parte1 = segunda+quarta+sexta
parte2 = primeira+terceira+quinta

if((parte1 % parte2)==0)
  mensagem=("senha invalida")
else	
  mensagem=("acesso liberado")

print(mensagem)

-- ERROR:
File "XXXX", line 11
    if((parte1 % parte2)==0)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:21:59) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira =  senha // 100000 % 10
segunda  =  senha // 10000 % 10
terceira =  senha // 1000 % 10
quarta   =  senha // 100 % 10
quinta   =  senha // 10 % 10
sexta    =  senha // 1 % 10
parte1 = segunda+quarta+sexta
parte2 = primeira+terceira+quinta

if((parte1 % parte2)==0):
  mensagem=("senha invalida")
else:	
  mensagem=("acesso liberado")

print(mensagem)

-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:22:48) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira =  senha // 100000 % 10
segunda  =  senha // 10000 % 10
terceira =  senha // 1000 % 10
quarta   =  senha // 100 % 10
quinta   =  senha // 10 % 10
sexta    =  senha // 1 % 10
parte1 = segunda+quarta+sexta
parte2 = primeira+terceira+quinta

if((parte1 % parte2)==0):
  mensagem=("acesso liberado") 
else:	
  mensagem=("senha invalida")

print(mensagem)

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:22:54) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira =  senha // 100000 % 10
segunda  =  senha // 10000 % 10
terceira =  senha // 1000 % 10
quarta   =  senha // 100 % 10
quinta   =  senha // 10 % 10
sexta    =  senha // 1 % 10
parte1 = segunda+quarta+sexta
parte2 = primeira+terceira+quinta

if((parte1 % parte2)==0):
  mensagem=("acesso liberado") 
else:	
  mensagem=("senha invalida")

print(mensagem)

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:23:02) 
-- CODE:
senha =int(input("Informe a senha :"))
primeira =  senha // 100000 % 10
segunda  =  senha // 10000 % 10
terceira =  senha // 1000 % 10
quarta   =  senha // 100 % 10
quinta   =  senha // 10 % 10
sexta    =  senha // 1 % 10
parte1 = segunda+quarta+sexta
parte2 = primeira+terceira+quinta

if((parte1 % parte2)==0):
  mensagem=("acesso liberado") 
else:	
  mensagem=("senha invalida")

print(mensagem)

-- EXECUTION TIME:
0.197972
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
